# macadev.github.io

./: 332304_23_07_18_13_21_38.mtl  CMakeLists.txt  Simple-Game-Client.data  Simple-Game-Client.js  Simple-Game-Client.wasm  blob-transformed.glb  index.html
assets/: index-1185dc70.css  index-3d13548b.js  index-656d3468.js  index-9741ba78.js  index-b984c061.js  index-d9eec41f.js
blob_character/: 332319_23_07_18_13_30_42.mtl
